--- a/src/app/container/list-book/list-book.component.html
+++ b/src/app/container/list-book/list-book.component.html
@@ -4,6 +4,6 @@
   </section>
 
   <section class="book-list-container-list">
-    {{JSON.stringify(bookList)}}
+    {{bookList | json}}
   </section>
 </div>
